[ADD] desktop navbar

--- a/src/utils/theme.scss
+++ b/src/utils/theme.scss
@@ -4,6 +4,7 @@ $colorPrimary: #de7b1f;
 $colorSecondary: #2d4c56;
 $colorTertiary: #10242e;
 $colorGrey: #4a4a4a;
+$colorWhite: #ffffff;
 
 $tabletMedium: "min-width: 580px";
 $tablet: "min-width: 768px";
