--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -21,15 +21,38 @@
   position: relative;
 
   & nav {
+    padding: 32px;
     display: flex;
     list-style: none;
-    gap: 25px;
+    gap: 26px;
     top: 0;
     position: absolute;
     right: 0;
     z-index: 1;
     li {
       cursor: pointer;
+      font-size: 20px;
+      text-transform: uppercase;
+      color: $colorWhite;
+      font-weight: 400;
+      a {
+        text-decoration: none;
+        color: $colorWhite;
+      }
+    }
+  }
+
+  .hero-social-media {
+    position: absolute;
+    right: 32px;
+    display: flex;
+    flex-direction: column;
+    width: 40px;
+    z-index: 1;
+    gap: 16px;
+    top: 90px;
+    img {
+      width: 40px;
     }
   }
 
