[ADD] responsive hero and navbar

--- a/src/utils/theme.scss
+++ b/src/utils/theme.scss
@@ -6,7 +6,7 @@ $colorTertiary: #10242e;
 $colorGrey: #4a4a4a;
 $colorWhite: #ffffff;
 
-$tabletMedium: "min-width: 580px";
-$tablet: "min-width: 768px";
+$tablet: "min-width: 580px";
+$tabletLarge: "min-width: 768px";
 $desktop: "min-width: 1024px";
 $desktopLarge: "min-width: 1300px";
