--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -13,104 +13,298 @@
   }
 }
 
-.hero-wrapper {
-  height: 100vh;
+.mobile {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  position: relative;
+  align-items: center;
 
+  .content {
+    width: 100%;
+    height: 92%;
+    background-color: #f5f6fa;
+    z-index: 3;
+  }
   & nav {
-    padding: 32px;
+    background-color: #424246;
+    height: 70px;
+  }
+
+  #menuToggle {
     display: flex;
-    list-style: none;
-    gap: 26px;
-    top: 0;
-    position: absolute;
-    right: 0;
+    flex-direction: column;
+    position: relative;
+    top: 25px;
+    left: 25px;
     z-index: 1;
-    li {
-      cursor: pointer;
-      font-size: 20px;
-      text-transform: uppercase;
-      color: $colorWhite;
-      font-weight: 400;
-      a {
-        text-decoration: none;
-        color: $colorWhite;
-      }
+    -webkit-user-select: none;
+    user-select: none;
+    width: 90%;
+  }
+
+  #menuToggle input {
+    display: flex;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
+
+  #menuToggle span {
+    display: flex;
+    width: 29px;
+    height: 2px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #ffffff;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 5px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+
+  #menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-3px, -1px);
+    background: #36383f;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  #menu {
+    position: absolute;
+    width: 90%;
+    height: 380px;
+    box-shadow: 0 0 10px #85888c;
+    margin: -50px 0 0 -50px;
+    padding: 80px;
+    padding-top: 110px;
+    background-color: #f5f6fa;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  }
+
+  #menu li {
+    padding: 10px 0;
+    transition-delay: 2s;
+    font-size: 24px;
+    list-style: none;
+    a {
+      text-decoration: none;
+      color: $colorTertiary;
     }
   }
 
+  #menuToggle input:checked ~ ul {
+    transform: none;
+    list-style: none;
+  }
+}
+
+.hero-wrapper {
+  .hero-vectors {
+    display: none;
+  }
+
   .hero-social-media {
-    position: absolute;
-    right: 32px;
     display: flex;
-    flex-direction: column;
-    width: 40px;
-    z-index: 1;
     gap: 16px;
-    top: 90px;
+    justify-content: center;
+
     img {
       width: 40px;
     }
   }
 
-  .hero-vectors {
-    .vector-top {
-      position: absolute;
-      right: 0;
-      top: 0;
-      z-index: 0;
-    }
-    .vector-left {
-      position: absolute;
-      left: 0;
-      bottom: 50px;
-      z-index: 0;
-    }
-  }
-
   .hero-content {
     display: flex;
+    flex-direction: column-reverse;
+    gap: 10px;
     align-items: center;
-    gap: 50px;
-    margin: 0 auto;
 
     .hero-text {
       z-index: 1;
+      text-align: center;
+      max-width: 80%;
+
       p {
         font-size: 1.2rem;
         font-weight: 400;
         color: $colorTertiary;
-        line-height: 350%;
+        line-height: 100%;
+        padding: 20px 0;
       }
       .inner {
-        line-height: 350%;
+        line-height: 250%;
         h1 {
           color: $colorPrimary;
           font-weight: 700;
-          font-size: 5rem;
+          font-size: 3rem;
         }
         h2 {
           color: $colorSecondary;
           font-weight: 700;
-          font-size: 3rem;
+          font-size: 2rem;
         }
       }
     }
 
     .hero-image {
+      margin: 10px auto 10px;
       animation: resize 8s ease-in-out infinite;
       background-image: url(/src/assets/images/me.jpg);
       background-position: 50%;
       background-repeat: no-repeat;
       background-size: cover;
       border-radius: 40% 50% 40% 80%/30% 80% 40% 50%;
-      height: 350px;
+      height: 250px;
       position: relative;
       transition: all 1s ease-in-out;
-      width: 350px;
+      width: 250px;
+    }
+  }
+}
+
+@media screen and ($tablet) {
+  .hero-wrapper {
+    position: relative;
+    height: 100vh;
+    .hero-vectors {
+      display: block;
+      .vector-top {
+        position: absolute;
+        right: 0;
+        top: 0px;
+        width: 250px;
+      }
+
+      .vector-left {
+        width: 300px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: 0;
+      }
+    }
+    .hero-content {
+      .hero-image {
+        margin: 50px auto 30px;
+        height: 300px;
+        width: 300px;
+      }
+    }
+  }
+}
+
+@media screen and ($desktop) {
+  .hero-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .hero-social-media {
+      position: absolute;
+      right: 32px;
+      flex-direction: column;
+      width: 40px;
+      z-index: 1;
+      top: 90px;
+    }
+
+    & nav.desktop {
+      padding: 32px;
+      display: flex;
+      list-style: none;
+      gap: 26px;
+      top: 0;
+      position: absolute;
+      right: 0;
+      z-index: 1;
+      li {
+        cursor: pointer;
+        font-size: 20px;
+        text-transform: uppercase;
+        color: $colorWhite;
+        font-weight: 400;
+        a {
+          text-decoration: none;
+          color: $colorWhite;
+        }
+      }
+    }
+
+    .hero-content {
+      flex-direction: row;
+      align-items: center;
+      gap: 50px;
+      margin: 0 auto;
+
+      .hero-image {
+        margin: 50px auto 10px;
+        height: 350px;
+        width: 350px;
+      }
+
+      .hero-text {
+        text-align: start;
+
+        p {
+          line-height: 350%;
+        }
+        .inner {
+          line-height: 350%;
+          h1 {
+            font-size: 5rem;
+          }
+          h2 {
+            font-size: 3rem;
+          }
+        }
+      }
+    }
+    .hero-vectors {
+      .vector-top {
+        width: auto;
+        top: 0;
+      }
+
+      .vector-left {
+        width: 300px;
+        bottom: 0px;
+      }
+    }
+  }
+}
+
+@media screen and ($desktopLarge) {
+  .hero-wrapper {
+    .hero-vectors {
+      .vector-top {
+        width: auto;
+        top: 0;
+      }
+
+      .vector-left {
+        width: auto;
+      }
     }
   }
 }
