--- a/src/components/InfoCard/InfoCard.scss
+++ b/src/components/InfoCard/InfoCard.scss
@@ -2,42 +2,114 @@
 
 .infocard-wrapper {
   background-color: #ececec;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
-  .infocard-text {
-    & h3 {
-      color: $colorPrimary;
-      text-transform: uppercase;
-      letter-spacing: 10%;
-      font-weight: 500;
-      font-size: 20px;
-      padding: 32px 16px 8px 16px;
+  .infocard-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-      margin-top: 16px;
+    .infocard-text {
+      
+      & h3 {
+        color: $colorPrimary;
+        text-transform: uppercase;
+        letter-spacing: 10%;
+        font-weight: 500;
+        font-size: 20px;
+        padding: 32px 16px 8px 16px;
+        margin-top: 16px;
+      }
+
+      & h4 {
+        color: $colorGrey;
+        font-weight: 700;
+        font-size: 20px;
+        padding: 0 16px;
+        line-height: 150%;
+      }
+
+      & p {
+        color: $colorGrey;
+        font-weight: 400;
+        text-align: justify;
+        font-size: 15px;
+        padding: 8px 16px;
+        line-height: 180%;
+      }
+
+      .img-container {
+        display: none;
+      }
     }
 
-    & h4 {
-      color: $colorGrey;
-      font-weight: 700;
-      font-size: 20px;
-      padding: 0 16px;
-      line-height: 150%;
-    }
-
-    & p {
-      color: $colorGrey;
-      font-weight: 400;
-      text-align: justify;
-      font-size: 15px;
-      padding: 8px 16px;
-      line-height: 180%;
+    img {
+      width: 70%;
+      max-width: 400px;
+      margin: 10px auto 30px;
     }
   }
+}
 
-  img {
-    width: 90%;
-    margin: 10px auto 30px;
+@media screen and ($tablet) {
+  .infocard-wrapper {
+
+    .infocard-inner {
+
+      .infocard-text {
+        width: 90%;
+      }
+
+      img {
+        width: 70%;
+        margin: 10px auto 30px;
+      }
+    }
+  }
+}
+
+@media screen and ($desktop) {
+  .infocard-wrapper {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    flex-direction: row;
+    width: 95%;
+    padding-left: 5%;
+    border-radius: 0 24px 24px 0;
+    box-shadow: 2px 4px 15px #93b0b9;
+    justify-content: center;
+    align-items: center;
+
+    .infocard-inner {
+      padding: 32px 0;
+      flex-direction: row;
+      max-width: 1090px;
+      margin: 0 auto;
+
+      .infocard-text {
+        width: 50%;
+
+        .img-container {
+          justify-content: flex-end;
+          display: flex;
+
+          img {
+            width: 40px;
+            margin-left: 350px;
+          }
+        }
+      }
+
+      img {
+        padding: 16px 0;
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
+@media screen and ($desktopLarge) {
+  .infocard-wrapper {
+    width: 85%;
+    padding-left: 15%;
   }
 }
