--- a/src/utils/theme.scss
+++ b/src/utils/theme.scss
@@ -3,7 +3,8 @@ $fontPrimary: "Lexend", sans-serif;
 $colorPrimary: #de7b1f;
 $colorSecondary: #2d4c56;
 $colorTertiary: #10242e;
-$colorGrey: #4a4a4a;
+$colorTextPrimary: #4a4a4a;
+$colorTextSecondary: #d9d9d9;
 $colorWhite: #ffffff;
 
 $tablet: "min-width: 580px";
