[ADD] scroll to top btn

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -35,6 +35,8 @@
 
 @media screen and ($tablet) {
   .footer-wrapper {
+    padding: 24px 0;
+
     .footer-inner {
       display: flex;
       align-items: center;
