[ADD] projects, image scroll animation

--- a/src/components/ScrollToTop/ScrollToTop.scss
+++ b/src/components/ScrollToTop/ScrollToTop.scss
@@ -11,7 +11,21 @@
   border-radius: 55px;
   z-index: 1;
 }
+
 .btn-scroll-to-top:hover {
   transition: 1s;
   scale: 1.2;
+}
+
+@media screen and ($tablet) {
+  .btn-scroll-to-top {
+    bottom: 120px;
+  }
+}
+
+@media screen and ($desktopLarge) {
+  .btn-scroll-to-top {
+    bottom: 52px;
+    right: 30px;
+  }
 }
