--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -31,7 +31,7 @@
     justify-content: center;
     align-items: center;
     gap: 16px;
-    padding: 16px 32px;
+    padding: 16px;
 
     h2 {
       color: $colorTextPrimary;
@@ -43,7 +43,7 @@
       line-height: 150%;
       text-align: center;
     }
-    
+
     .project-technologies {
       display: flex;
       gap: 24px;
@@ -63,7 +63,7 @@
 
     .buttons {
       display: flex;
-      gap: 16px;
+      gap: 8px;
       justify-content: space-between;
       width: 100%;
       height: 64px;
@@ -74,7 +74,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 8px;
+        gap: 2px;
         text-decoration: none;
         width: 50%;
         padding: 10px 0;
@@ -91,7 +91,25 @@
       }
 
       & img {
-        width: 32px;
+        width: 20px;
+      }
+    }
+  }
+}
+
+@media screen and ($tablet) {
+  .project-wrapper {
+    .project-data {
+      padding: 16px 32px;
+      .project-technologies {
+        .buttons {
+          & img {
+            width: 32px;
+          }
+          a {
+            gap: 8px;
+          }
+        }
       }
     }
   }
@@ -121,6 +139,10 @@
       flex: 2;
       gap: 24px;
       margin-top: 24px;
+
+      & .buttons {
+        gap: 16px;
+      }
     }
   }
 }
