[ADD] contact form

--- a/src/utils/theme.scss
+++ b/src/utils/theme.scss
@@ -5,6 +5,7 @@ $colorSecondary: #2d4c56;
 $colorTertiary: #10242e;
 $colorTextPrimary: #4a4a4a;
 $colorTextSecondary: #d9d9d9;
+$colorTextTertiary: #606060;
 $colorWhite: #ffffff;
 
 $tablet: "min-width: 580px";
