--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -58,6 +58,11 @@
         font-size: 18px;
         width: 100%;
         margin-top: 4px;
+        &:focus {
+          border: 1px solid $colorPrimary;
+          border-radius: 4px;
+          outline: none;
+        }
       }
 
       .row-item {
