[ADD] new technologies images

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -80,6 +80,7 @@
         font-weight: 600;
         padding: 10px 15px;
         border-radius: 5px;
+        cursor: pointer;
 
         &:hover {
           background-color: $colorSecondary;
